added packages required for Bayesian optimization

--- a/environment.yaml
+++ b/environment.yaml
@@ -21,4 +21,8 @@ dependencies:
   - pandas
   - pytables
   - tensorflow
+  - tensorflow-gpu
   - keras
+  - keras-tuner
+  - bayesian-optimization
+  - pydot
